# intercept

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
docs/: elo-methodology.md  index.md  limitations.md  publishing-checklist.md  results.md
experiments/: animate_demos.py  animate_realistic.py  p0_first_engagement.py  p10_realistic_demo.py  p11_realistic_estimation.py  p12_train_rl_realistic.py  p13_realistic_rl_vs_classical.py  p14_advanced_evasion.py  p15_residual_rl.py  p16_recurrent_residual.py  p17_benchmark_3d.py  p18_estimation_3d.py  p19_capstone_benchmark.py  p1_guidance_comparison.py  p20_train_rl_3d.py  p21_gain_sensitivity.py  p22_adversarial_evader.py  p23_recurrent_residual_3d.py  p24_salvo.py  p25_selfplay.py  p26_estimation_advanced.py  p27_converged_selfplay.py  p28_swarm_showcase.py  p29_marl_swarm.py  p2_benchmark.py  p30_population_selfplay.py  p31_rl_estimated_obs.py  p32_league.py  p33_mode_adaptive.py  p34_pincer.py  p35_swarm_penetration.py  p3_estimation.py  p4_optimal_mpc.py  p5_rl_vs_classical.py  p5_train_rl.py  p6_game_theory.py  p7_swarm_defense.py  p8_realistic_benchmark.py  p9_3d_demo.py
intercept/: __init__.py
planning/: 00_RESEARCH_REPORT.md  01_PROJECT_PLAN.md
results/: p13_realistic_rl_vs_classical.csv  p15_residual_rl.csv  p16_recurrent_residual.csv  p17_benchmark_3d.csv  p20_rl_3d.csv  p21_gain_sensitivity.csv  p22_adversarial_evader.csv  p23_recurrent_residual_3d.csv  p25_selfplay.csv  p26_estimation_advanced.csv  p27_converged_selfplay.csv  p28_swarm_showcase.csv  p29_marl_swarm.csv  p2_benchmark.csv  p30_population_selfplay.csv  p31_rl_estimated_obs.csv  p32_league.csv  p32_league.md  p33_mode_adaptive.csv  p34_pincer.csv  p35_swarm_penetration.csv  p5_rl_vs_classical.csv  p8_realistic_benchmark.csv
scenarios/: 01_headon_nonmaneuvering.yaml  02_crossing.yaml  03_tail_chase.yaml  04_weaving_9g.yaml  05_high_offset_crossing.yaml
tests/: conftest.py  test_3d.py  test_adaptive.py  test_aero.py  test_benchmark.py  test_dashboard.py  test_dynamics.py  test_game.py  (+20 more)
(+114 files in other folders)
